fix: hard to read font on the Keyboard button component

--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -139,6 +139,7 @@ kbd {
   border-bottom-color: $template-color-accent !important;
   border-radius: 6px;
   box-shadow: inset 0 -1px 0 $template-color-accent !important;
+  font-family: $template-default-font;
 }
 
 :focus {
